# Android_Media

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/comochris/mediaplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AACUtil.cpp  AACUtil.h  AVGuard.cpp  AVGuard.h  AVQueueInterface.cpp  AVQueueInterface.h  CMakeLists.txt  IAVBlockQueue.cpp  IAVBlockQueue.h  IAVDecoder.cpp  IAVDecoder.h  IAudioFrameProvider.cpp  IAudioFrameProvider.h  IVideoFrameProvider.cpp  IVideoFrameProvider.h  IVideoPlayer.cpp  IVideoPlayer.h  MediaPlayerController.cpp  MediaPlayerController.h  OpenSLESPlayer.cpp  OpenSLESPlayer.h  com_comochris_mediaplayer.cpp  com_comochris_mediaplayer.h  player.cpp  player.h  surface.cpp  version.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/comochris/mediaplayer/: FFMediaPlayer.java  MainActivity.java  StoragePermission.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/comochris/mediaplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
